--- a/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html
@@ -25,7 +25,7 @@
         <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css">
         <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-        <link rel="stylesheet" href="https://cra-design.github.io/gst-hst-business/templates/css/custom.css">
+        <link rel="stylesheet" href="https://cra-proto.github.io/gst-hst-business/templates/css/custom.css">
         <link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_2/wet-boew/assets/favicon.ico" rel="shortcut icon">
     </head>
     <body vocab="https://schema.org/" typeof="WebPage" resource="#wb-webpage">
@@ -38,7 +38,7 @@
         <data id="devoptions" data-loc-storage="gitCRATemplateDevOptions" value="false"></data>
         <data id="exitpage" data-exit-by-url="false" data-mod-link-file="/TFSA-cop/data/exclude-redirect.json" value="/TFSA-cop/exit.html"></data>
         <data id="relextlnk" data-origin="https://www.canada.ca" value="false"></data>
-        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-design.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
+        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-proto.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
         <!-- END of github only template section -->
         <div id="def-top">
             <!-- Write closure fall-back static file -->
@@ -63,7 +63,7 @@
                     type: "contextual", 
                     label: "sign in", 
                     labelExtended: "CRA sign in",
-                    link: "https://cra-design.github.io/cra-portal/index.html?xitpg=false"
+                    link: "https://cra-proto.github.io/cra-portal/index.html?xitpg=false"
                 }], 
                 breadcrumbs: [{
                     title: "Canada.ca", 
@@ -73,7 +73,7 @@
                     href: "https://www.canada.ca/en/services/taxes.html"
                 }, {
                     title: "Savings and pension plans", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/services/taxes/savings-and-pension-plans.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/services/taxes/savings-and-pension-plans.html"
                 }]
             });
         </script>
@@ -89,10 +89,10 @@
 	<div class="container">
 		<h2>Most requested</h2>
 		<ul>
-      		    <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/calculate-your-tfsa-contribution-room.html">Calculate your contribution room</a></li>
-			<li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/what-to-do-if-you-contribute-too-much.html">If you over-contribute to a TFSA</a></li>
-		    <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/withdrawing-from-a-tfsa.html#toc1">How withdrawals affect contribution room</a></li>
-			<li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-to-pay-tax-on-a-tfsa.html">If you have to pay tax on a TFSA</a></li>
+      		    <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/calculate-your-tfsa-contribution-room.html">Calculate your contribution room</a></li>
+			<li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/what-to-do-if-you-contribute-too-much.html">If you over-contribute to a TFSA</a></li>
+		    <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/withdrawing-from-a-tfsa.html#toc1">How withdrawals affect contribution room</a></li>
+			<li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-to-pay-tax-on-a-tfsa.html">If you have to pay tax on a TFSA</a></li>
 		</ul>
 	</div>
 </section>     
@@ -103,27 +103,27 @@
 <div class="row">
 
 			    
-<div class="col-lg-4 col-md-6"><h3><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/what-is-a-tfsa.html">What is a TFSA</a></h3>
+<div class="col-lg-4 col-md-6"><h3><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/what-is-a-tfsa.html">What is a TFSA</a></h3>
 <p>What a TFSA is, how it works, and the different types available</p>
 </div>
 
-<div class="col-lg-4 col-md-6"><h3><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/opening-a-tfsa.html">Opening a TFSA</a></h3>
+<div class="col-lg-4 col-md-6"><h3><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/opening-a-tfsa.html">Opening a TFSA</a></h3>
 <p>Who can open, how to open, how to close a TFSA </p>
 </div>
 
-<div class="col-lg-4 col-md-6"><h3><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa.html">Contributing to a TFSA</a></h3>
+<div class="col-lg-4 col-md-6"><h3><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa.html">Contributing to a TFSA</a></h3>
 <p>How to calculate your available room and make contributions to your TFSAs</p>
 </div>
 
-<div class="col-lg-4 col-md-6"><h3><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/withdrawing-from-a-tfsa.html">Withdrawing from a TFSA</a></h3>
+<div class="col-lg-4 col-md-6"><h3><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/withdrawing-from-a-tfsa.html">Withdrawing from a TFSA</a></h3>
 <p>How to make a withdrawal from your account and when you may replace it </p>
 </div>
 
-<div class="col-lg-4 col-md-6"><h3><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/requesting-a-tfsa-transfer.html">Requesting a TFSA transfer</a></h3>
+<div class="col-lg-4 col-md-6"><h3><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/requesting-a-tfsa-transfer.html">Requesting a TFSA transfer</a></h3>
 <p>How to transfer funds from one TFSA to another or from one institution to another </p>
 </div>    
 
-<div class="col-lg-4 col-md-6"><h3><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa.html">Owing tax on a TFSA</a></h3>
+<div class="col-lg-4 col-md-6"><h3><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa.html">Owing tax on a TFSA</a></h3>
 <p>Why there is sometimes tax on a TFSA and how to pay it </p>
 </div>
 
@@ -135,9 +135,9 @@
 <div class="container">
                   <h2 class="h3 mb-3 mrgn-tp-md">Support with life's transitions</h2> 
     <ul class="list-unstyled colcount-md-3 compact bold-content lst-spcd fnt-hdng mrgn-tp-sm">
-     	<li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies.html">If a TFSA holder dies</a></li>
-	<li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/if-you-become-non-resident.html">If you become a non-resident</a></li>  
-	<li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/requesting-a-tfsa-transfer.html#toc3">If you divorce or separate</a></li>  
+     	<li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies.html">If a TFSA holder dies</a></li>
+	<li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/if-you-become-non-resident.html">If you become a non-resident</a></li>  
+	<li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/requesting-a-tfsa-transfer.html#toc3">If you divorce or separate</a></li>  
 	</ul>
 </div>
 </section>
@@ -209,9 +209,9 @@
         <script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
         <script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.js"></script>
         <!-- START of github only scripts -->
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
-        <script src="https://cra-design.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
+        <script src="https://cra-proto.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
         <!-- END of github only scripts -->
     </body>
 </html>
