--- a/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/how-to-contribute.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/how-to-contribute.html
@@ -24,7 +24,7 @@
         <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css">
         <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-        <link rel="stylesheet" href="https://cra-design.github.io/gst-hst-business/templates/css/custom.css">
+        <link rel="stylesheet" href="https://cra-proto.github.io/gst-hst-business/templates/css/custom.css">
         <link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_2/wet-boew/assets/favicon.ico" rel="shortcut icon">
     </head>
     <body vocab="https://schema.org/" typeof="WebPage" resource="#wb-webpage">
@@ -37,7 +37,7 @@
         <data id="devoptions" data-loc-storage="gitCRATemplateDevOptions" value="false"></data>
         <data id="exitpage" data-exit-by-url="false" data-mod-link-file="/TFSA-cop/data/exclude-redirect.json" value="/TFSA-cop/exit.html"></data>
         <data id="relextlnk" data-origin="https://www.canada.ca" value="false"></data>
-        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-design.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
+        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-proto.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
         <!-- END of github only template section -->
         <div id="def-top">
             <!-- Write closure fall-back static file -->
@@ -62,7 +62,7 @@
                     type: "contextual", 
                     label: "sign in", 
                     labelExtended: "CRA sign in",
-                    link: "https://cra-design.github.io/cra-portal/index.html?xitpg=false"
+                    link: "https://cra-proto.github.io/cra-portal/index.html?xitpg=false"
                 }], 
                 breadcrumbs: [{
                     title: "Canada.ca", 
@@ -72,13 +72,13 @@
                     href: "https://www.canada.ca/en/services/taxes.html"
                 }, {
                     title: "Savings and pension plans", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/services/taxes/savings-and-pension-plans.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/services/taxes/savings-and-pension-plans.html"
                 }, {
                     title: "The Tax-free Savings Account (TFSA)", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html"
                 }, {
                     title: "Contributing to a TFSA", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa.html"
                 }]
             });
         </script>
@@ -158,7 +158,7 @@ div.mg-cell.pr-0 {
                         <div id="page-content">
 <!--<p class="pull-left small"><strong>You may be looking for:</strong></p>
 <ul class="pull-left mrgn-lft-sm list-unstyled small">
-<li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/before-you-contribute.html">Before you contribute/ Understand contribution room</a></li>
+<li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/before-you-contribute.html">Before you contribute/ Understand contribution room</a></li>
 </ul>
 <div class="clearfix">&nbsp;</div>-->
 
@@ -178,10 +178,10 @@ div.mg-cell.pr-0 {
 <h3>Make sure you have available room </h3>
 
 <p>Your available contribution room applies across all your TFSAs. And it can change when you make withdrawals and contributions. Always calculate  your available contribution room <strong>before </strong>you contribute.</p>
-<p>For more  information:  <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/calculate-your-tfsa-contribution-room.html#before">Calculate your room  before you contribute</a></p>
+<p>For more  information:  <a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/calculate-your-tfsa-contribution-room.html#before">Calculate your room  before you contribute</a></p>
 <p>If you become a  non-resident, do not contribute to your TFSA.</p>
 
-<p>For more  information: <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/before-you-contribute.html#toc4">Do not contribute  if you are a non-resident</a> </p>
+<p>For more  information: <a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/before-you-contribute.html#toc4">Do not contribute  if you are a non-resident</a> </p>
 
 <h2 id="toc3">How to make a contribution</h2>
 <p>To contribute funds to your TFSA, you must go through the financial institution that  issued it. Contact your issuer or consult their website to find out what options are available.</p> 
@@ -190,12 +190,12 @@ div.mg-cell.pr-0 {
 
 <h2 id="toc2">How to avoid an over-contribution</h2>
 <p>Do not contribute more than your available contribution room allows. If you  over-contribute, the excess amount is taxable at a rate of <strong>1% per month</strong> for as  long as the excess amount remains in the account.</p>
-<p>For more information: <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/what-to-do-if-you-contribute-too-much.html">If you  over-contribute to a TFSA</a> </p>
+<p>For more information: <a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/what-to-do-if-you-contribute-too-much.html">If you  over-contribute to a TFSA</a> </p>
                              
 
 <h3>Track your contribution room yourself</h3>
 <p>We recommend calculating your available contribution room yourself using your own records. Your financial institution and the CRA  may not necessarily have your complete TFSA information.</p>
-<p></p>For more information: <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/calculate-your-tfsa-contribution-room.html#before">Calculate your room before you contribute</a></p>
+<p></p>For more information: <a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/calculate-your-tfsa-contribution-room.html#before">Calculate your room before you contribute</a></p>
 
 <h3>Do not replace a withdrawal in the same year&nbsp;</h3>
 <p>Never re-contribute all or part of a withdrawal in the same calendar year that you made the withdrawal unless you know that you have enough unused contribution room available.</p>
@@ -328,7 +328,7 @@ div.mg-cell.pr-0 {
 
 <h3>Do not over-contribute to multiple TFSAs</h3>
 <p>If you have multiple TFSAs, your available contribution room applies to  all of them combined. To avoid over-contributing, be sure to track your transactions  for all your accounts before making a contribution.</p>
-<p>For more information: <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/calculate-your-tfsa-contribution-room.html#before">Calculate your room before you contribute</a></p>
+<p>For more information: <a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/calculate-your-tfsa-contribution-room.html#before">Calculate your room before you contribute</a></p>
 
 <details>  
 <summary>Example: Do not over-contribute to multiple accounts</summary>
@@ -388,7 +388,7 @@ div.mg-cell.pr-0 {
 
 <h3>Do direct transfers through your TFSA issuer </h3>
 <p>To avoid tax consequences when transferring funds from one TFSA to  another, always do a direct transfer through the receiving financial institution. If you withdraw your  own funds and re-contribute them to another TFSA, you may over-contribute by mistake. </p>
-<p>For more information: <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/requesting-a-tfsa-transfer.html#toc2">Avoid doing your own  transfers</a></p>
+<p>For more information: <a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/requesting-a-tfsa-transfer.html#toc2">Avoid doing your own  transfers</a></p>
 
 <h3>Option to give  to your spouse or common-law partner</h3>
 <p>The total contribution you make to your own TFSA  cannot be more than your available contribution room. If you have additional funds that you would like to invest tax-free, you may gift your spouse or common-law  partner money so that they can contribute to their own TFSA. This amount or any  income earned from this amount will <strong>not</strong> be allocated back to you.</p>
@@ -397,10 +397,10 @@ div.mg-cell.pr-0 {
 
 <h2>Related information</h2>
 <ul>
-  <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/before-you-contribute.html">Understanding TFSA contribution room</a></li>
-  <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/calculate-your-tfsa-contribution-room.html">Calculate your TFSA  contribution room</a></li>
-    <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/permitted-tfsa-investments.html">Permitted TFSA investments</a></li>
-  <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/what-to-do-if-you-contribute-too-much.html">If you over-contribute to  a TFSA</a></li>
+  <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/before-you-contribute.html">Understanding TFSA contribution room</a></li>
+  <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/calculate-your-tfsa-contribution-room.html">Calculate your TFSA  contribution room</a></li>
+    <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/permitted-tfsa-investments.html">Permitted TFSA investments</a></li>
+  <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/what-to-do-if-you-contribute-too-much.html">If you over-contribute to  a TFSA</a></li>
 </ul>
 
                             
@@ -473,9 +473,9 @@ div.mg-cell.pr-0 {
         <script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
         <script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.js"></script>
         <!-- START of github only scripts -->
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
-        <script src="https://cra-design.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
+        <script src="https://cra-proto.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
         <!-- END of github only scripts -->
     </body>
 </html>
