--- a/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/permitted-tfsa-investments.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/permitted-tfsa-investments.html
@@ -24,11 +24,11 @@
         <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css">
         <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-        <link rel="stylesheet" href="https://cra-design.github.io/gst-hst-business/templates/css/custom.css">
+        <link rel="stylesheet" href="https://cra-proto.github.io/gst-hst-business/templates/css/custom.css">
         <link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_2/wet-boew/assets/favicon.ico" rel="shortcut icon">
 
 <!-- modify mid overlay size -->
-<link rel="stylesheet" href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tfsa.css">
+<link rel="stylesheet" href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tfsa.css">
         
     </head>
     <body vocab="https://schema.org/" typeof="WebPage" resource="#wb-webpage">
@@ -41,7 +41,7 @@
         <data id="devoptions" data-loc-storage="gitCRATemplateDevOptions" value="false"></data>
         <data id="exitpage" data-exit-by-url="false" data-mod-link-file="/TFSA-cop/data/exclude-redirect.json" value="/TFSA-cop/exit.html"></data>
         <data id="relextlnk" data-origin="https://www.canada.ca" value="false"></data>
-        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-design.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
+        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-proto.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
         <!-- END of github only template section -->
         <div id="def-top">
             <!-- Write closure fall-back static file -->
@@ -66,7 +66,7 @@
                     type: "contextual", 
                     label: "sign in", 
                     labelExtended: "CRA sign in",
-                    link: "https://cra-design.github.io/cra-portal/index.html?xitpg=false"
+                    link: "https://cra-proto.github.io/cra-portal/index.html?xitpg=false"
                 }], 
                 breadcrumbs: [{
                     title: "Canada.ca", 
@@ -76,13 +76,13 @@
                     href: "https://www.canada.ca/en/services/taxes.html"
                 }, {
                     title: "Savings and pension plans", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/services/taxes/savings-and-pension-plans.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/services/taxes/savings-and-pension-plans.html"
                 }, {
                     title: "The Tax-free Savings Account (TFSA)", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html"
                 }, {
                     title: "Contributing to a TFSA", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa.html"
                 }]
             });
         </script>
@@ -180,7 +180,7 @@ div.mg-cell.pr-0 {
 
 <p>Investments that are <strong>not</strong> permitted include any investment that is or becomes prohibited, non-qualified or that has an advantage. Non-permitted TFSA investments are taxable.</p>
 
-<p>For more information: <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-permitted-investments.html">If you are taxed on non-permitted investments</a></p>
+<p>For more information: <a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-permitted-investments.html">If you are taxed on non-permitted investments</a></p>
 
 <h2 id="toc2">How some investments affect your TFSA</h2>
 
@@ -309,15 +309,15 @@ div.mg-cell.pr-0 {
 
 <h3>Related information</h3>   
 <ul>
-     <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/before-you-contribute.html">Understanding TFSA contribution room</a></li>
-    <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/calculate-your-tfsa-contribution-room.html">Calculate your TFSA contribution room</a></li> 
-    <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/how-to-contribute.html">How to contribute to a TFSA</a></li>
-    <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/what-to-do-if-you-contribute-too-much.html">If you over-contribute to a TFSA</a></li>
+     <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/before-you-contribute.html">Understanding TFSA contribution room</a></li>
+    <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/calculate-your-tfsa-contribution-room.html">Calculate your TFSA contribution room</a></li> 
+    <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/how-to-contribute.html">How to contribute to a TFSA</a></li>
+    <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/what-to-do-if-you-contribute-too-much.html">If you over-contribute to a TFSA</a></li>
 </ul>            
                                 
 
 <!-- Ajax in definitions list for tfsa/ used by overlays -->
-<div data-ajax-replace="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tfsa-defs.html" class="original">
+<div data-ajax-replace="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tfsa-defs.html" class="original">
 
 </div>
 
@@ -386,9 +386,9 @@ div.mg-cell.pr-0 {
         <script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
         <script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.js"></script>
         <!-- START of github only scripts -->
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
-        <script src="https://cra-design.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
+        <script src="https://cra-proto.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
         <!-- END of github only scripts -->
     </body>
 </html>
