--- a/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/if-you-become-non-resident-test.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/if-you-become-non-resident-test.html
@@ -25,11 +25,11 @@
         <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css">
         <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-        <link rel="stylesheet" href="https://cra-design.github.io/gst-hst-business/templates/css/custom.css">
+        <link rel="stylesheet" href="https://cra-proto.github.io/gst-hst-business/templates/css/custom.css">
         <link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_2/wet-boew/assets/favicon.ico" rel="shortcut icon">
 
 <!-- modify mid overlay size -->
-<link rel="stylesheet" href="https://cra-design.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tfsa.css">
+<link rel="stylesheet" href="https://cra-proto.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tfsa.css">
 
     </head>
     <body vocab="https://schema.org/" typeof="WebPage" resource="#wb-webpage">
@@ -42,7 +42,7 @@
         <data id="devoptions" data-loc-storage="gitCRATemplateDevOptions" value="false"></data>
         <data id="exitpage" data-exit-by-url="false" data-mod-link-file="/TFSA-cop/data/exclude-redirect.json" value="/TFSA-cop/exit.html"></data>
         <data id="relextlnk" data-origin="https://www.canada.ca" value="false"></data>
-        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-design.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
+        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-proto.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
         <!-- END of github only template section -->
         <div id="def-top">
             <!-- Write closure fall-back static file -->
@@ -67,7 +67,7 @@
                     type: "contextual", 
                     label: "sign in", 
                     labelExtended: "CRA sign in",
-                    link: "https://cra-design.github.io/cra-portal/index.html?xitpg=false"
+                    link: "https://cra-proto.github.io/cra-portal/index.html?xitpg=false"
                 }], 
                 breadcrumbs: [{
                     title: "Canada.ca", 
@@ -77,10 +77,10 @@
                     href: "https://www.canada.ca/en/services/taxes.html"
                 }, {
                     title: "Savings and pension plans", 
-                    href: "https://cra-design.github.io/TFSA-test/en/services/taxes/savings-and-pension-plans.html"
+                    href: "https://cra-proto.github.io/TFSA-test/en/services/taxes/savings-and-pension-plans.html"
                 }, {
                     title: "The Tax-free Savings Account (TFSA)", 
-                    href: "https://cra-design.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html"
+                    href: "https://cra-proto.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html"
                 }]
             });
         </script>
@@ -188,7 +188,7 @@ div.mg-cell.pr-0 {
                             
 <p class="mrgn-tp-md">Understanding your residency status will help you determine if you can contribute to your TFSA tax-free or if your contributions will have tax consequences.</p>
 
-<p>Even if you no longer live in Canada, you may have residential ties in Canada that are enough for you to be considered a factual or deemed resident of Canada. In these cases, the regular rules for holding or <a href="https://cra-design.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/opening-a-tfsa.html">opening a TFSA</a> still apply.</p>
+<p>Even if you no longer live in Canada, you may have residential ties in Canada that are enough for you to be considered a factual or deemed resident of Canada. In these cases, the regular rules for holding or <a href="https://cra-proto.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/opening-a-tfsa.html">opening a TFSA</a> still apply.</p>
  
 <details>
 <summary>Review residential ties to Canada</summary>
@@ -363,7 +363,7 @@ div.mg-cell.pr-0 {
 
 </details>
                             
-<p>For more information: <a href="https://cra-design.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-resident-contributions.html">If you are taxed on non-resident contributions </a></p>
+<p>For more information: <a href="https://cra-proto.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-resident-contributions.html">If you are taxed on non-resident contributions </a></p>
 
 <h2 id="toc3">If you are a non-resident beneficiary of a TFSA</h2>
 
@@ -386,7 +386,7 @@ div.mg-cell.pr-0 {
 
 <p>Non-resident successor holders cannot make contributions to the TFSA while they are non-resident. However, they may withdraw funds at any time.  </p>
 
-<p>For more information on successor holders and possible tax implications: <a href="https://cra-design.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-successor-holder-of-a-tfsa.html">If you are a successor holder</a> </p>
+<p>For more information on successor holders and possible tax implications: <a href="https://cra-proto.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-successor-holder-of-a-tfsa.html">If you are a successor holder</a> </p>
 
   
 
@@ -398,19 +398,19 @@ div.mg-cell.pr-0 {
 
 <p>You must report these amounts to the CRA by completing a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/nr4.html">Statement of Amounts Paid or Credited to Non-Residents of Canada (Form NR4)</a>.</p>
 
-<p>For more information on designated beneficiaries and possible tax implications: <a href="https://cra-design.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-beneficiary-of-a-tfsa.html">If you are a designated beneficiary</a> </p>
+<p>For more information on designated beneficiaries and possible tax implications: <a href="https://cra-proto.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-beneficiary-of-a-tfsa.html">If you are a designated beneficiary</a> </p>
 
 <h2>Related information</h2> 
 <ul>
-      <li><a href="https://cra-design.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa.html">Owing tax on a TFSA</a></li>
-    <li><a href="https://cra-design.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies.html">When a TFSA holder dies</a></li>
-    <li><a href="https://cra-design.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/opening-a-tfsa.html#toc4">How to close a TFSA</a></li>
+      <li><a href="https://cra-proto.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa.html">Owing tax on a TFSA</a></li>
+    <li><a href="https://cra-proto.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies.html">When a TFSA holder dies</a></li>
+    <li><a href="https://cra-proto.github.io/TFSA-test/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/opening-a-tfsa.html#toc4">How to close a TFSA</a></li>
     <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/individuals-leaving-entering-canada-non-residents/non-residents-canada.html">Non-residents of Canada</a></li>
     <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/individuals-leaving-entering-canada-non-residents/leaving-canada-emigrants.html">Leaving Canada (emigrants)</a> </li>
 </ul>
 
 
-<div data-ajax-replace="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tfsa-defs.html" class="original">
+<div data-ajax-replace="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tfsa-defs.html" class="original">
 
 </div>
 
@@ -484,9 +484,9 @@ div.mg-cell.pr-0 {
         <script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
         <script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.js"></script>
         <!-- START of github only scripts -->
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
-        <script src="https://cra-design.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
+        <script src="https://cra-proto.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
         <!-- END of github only scripts -->
     </body>
 </html>
