--- a/en/revenue-agency/services/tax/individuals/topics/tfsa-defs.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tfsa-defs.html
@@ -41,7 +41,7 @@
 	<li>for a resident of Canada at any time in the year, the TFSA dollar limit for the calendar year; for any other case, nil</li>
 	<li>the total of all withdrawals made in the calendar year from all of the holder's TFSAs, other than a qualifying transfer or a specified distribution, or the portion of the withdrawal that is more than the excess TFSA amount determined at that time</li>
 </ul>	
-<!--<p>For more information, see the definition <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/forms-publications/publications/rc4466/tax-free-savings-account-tfsa-guide-individuals.html#portion_withdrawal">Qualifying portion of a withdrawal</a>.</p>-->
+<!--<p>For more information, see the definition <a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/forms-publications/publications/rc4466/tax-free-savings-account-tfsa-guide-individuals.html#portion_withdrawal">Qualifying portion of a withdrawal</a>.</p>-->
 </div>
 </section>
 
