--- a/exit.html
+++ b/exit.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/wet-boew/css/noscript.min.css" />
 </noscript>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
-<link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.css" /><link rel="stylesheet" href="https://cra-design.github.io/gst-hst-business/templates/css/custom.css" />
+<link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.css" /><link rel="stylesheet" href="https://cra-proto.github.io/gst-hst-business/templates/css/custom.css" />
 </head>
 <body vocab="http://schema.org/" typeof="WebPage">
     <!-- START of github only template section -->
@@ -96,7 +96,7 @@
 <script src="https://wet-boew.github.io/themes-dist/GCWeb/wet-boew/js/wet-boew.min.js"></script>
 <script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/js/theme.min.js"></script>
 <script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.js"></script>
-<script src="https://cra-design.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
+<script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
 <script>
     "use strict";
     
