--- a/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa.html
@@ -26,7 +26,7 @@
         <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css">
         <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-        <link rel="stylesheet" href="https://cra-design.github.io/gst-hst-business/templates/css/custom.css">
+        <link rel="stylesheet" href="https://cra-proto.github.io/gst-hst-business/templates/css/custom.css">
         <link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_2/wet-boew/assets/favicon.ico" rel="shortcut icon">
     </head>
     <body vocab="https://schema.org/" typeof="WebPage" resource="#wb-webpage">
@@ -39,7 +39,7 @@
         <data id="devoptions" data-loc-storage="gitCRATemplateDevOptions" value="false"></data>
         <data id="exitpage" data-exit-by-url="false" data-mod-link-file="/TFSA-cop/data/exclude-redirect.json" value="/TFSA-cop/exit.html"></data>
         <data id="relextlnk" data-origin="https://www.canada.ca" value="false"></data>
-        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-design.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
+        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-proto.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
         <!-- END of github only template section -->
         <div id="def-top">
             <!-- Write closure fall-back static file -->
@@ -64,7 +64,7 @@
                     type: "contextual", 
                     label: "sign in", 
                     labelExtended: "CRA sign in",
-                    link: "https://cra-design.github.io/cra-portal/index.html?xitpg=false"
+                    link: "https://cra-proto.github.io/cra-portal/index.html?xitpg=false"
                 }], 
                 breadcrumbs: [{
                     title: "Canada.ca", 
@@ -74,10 +74,10 @@
                     href: "https://www.canada.ca/en/services/taxes.html"
                 }, {
                     title: "Savings and pension plans", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/services/taxes/savings-and-pension-plans.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/services/taxes/savings-and-pension-plans.html"
                 }, {
                     title: "The Tax-free Savings Account (TFSA)", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html"
                 }]
             });
         </script>
@@ -95,19 +95,19 @@
 <div class="row mrgn-tp-md">
 
 			    
-<div class="col-lg-4 col-md-6"><h3><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-to-pay-tax-on-a-tfsa.html">If you have to pay tax on a TFSA</a></h3>
+<div class="col-lg-4 col-md-6"><h3><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-to-pay-tax-on-a-tfsa.html">If you have to pay tax on a TFSA</a></h3>
 <p>Why you may owe tax, how to file a TFSA Return, what to do if you disagree </p>
 </div>
 
-<div class="col-lg-4 col-md-6"><h3><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-excess-contributions.html">Tax on excess amounts</a></h3>
+<div class="col-lg-4 col-md-6"><h3><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-excess-contributions.html">Tax on excess amounts</a></h3>
 <p>How excess amounts are taxed and how to report them to the CRA</p>
 </div>
 
-<div class="col-lg-4 col-md-6"><h3><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-resident-contributions.html">Tax on non-resident contributions</a></h3>
+<div class="col-lg-4 col-md-6"><h3><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-resident-contributions.html">Tax on non-resident contributions</a></h3>
 <p>How non-resident contributions are taxed and how to report them to the CRA</p>
 </div>
 
-<div class="col-lg-4 col-md-6"><h3><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-permitted-investments.html">Tax on non-permitted investments</a></h3>
+<div class="col-lg-4 col-md-6"><h3><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-non-permitted-investments.html">Tax on non-permitted investments</a></h3>
 <p>How non-permitted investments are taxed and how to report them to the CRA</p>
 </div>
   
@@ -183,9 +183,9 @@
         <script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
         <script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.js"></script>
         <!-- START of github only scripts -->
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
-        <script src="https://cra-design.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
+        <script src="https://cra-proto.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
         <!-- END of github only scripts -->
     </body>
 </html>
