--- a/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/requesting-a-tfsa-transfer.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/requesting-a-tfsa-transfer.html
@@ -24,7 +24,7 @@
         <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css">
         <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-        <link rel="stylesheet" href="https://cra-design.github.io/gst-hst-business/templates/css/custom.css">
+        <link rel="stylesheet" href="https://cra-proto.github.io/gst-hst-business/templates/css/custom.css">
         <link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_2/wet-boew/assets/favicon.ico" rel="shortcut icon">
     </head>
     <body vocab="https://schema.org/" typeof="WebPage" resource="#wb-webpage">
@@ -37,7 +37,7 @@
         <data id="devoptions" data-loc-storage="gitCRATemplateDevOptions" value="false"></data>
         <data id="exitpage" data-exit-by-url="false" data-mod-link-file="/TFSA-cop/data/exclude-redirect.json" value="/TFSA-cop/exit.html"></data>
         <data id="relextlnk" data-origin="https://www.canada.ca" value="false"></data>
-        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-design.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
+        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-proto.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
         <!-- END of github only template section -->
         <div id="def-top">
             <!-- Write closure fall-back static file -->
@@ -62,7 +62,7 @@
                     type: "contextual", 
                     label: "sign in", 
                     labelExtended: "CRA sign in",
-                    link: "https://cra-design.github.io/cra-portal/index.html?xitpg=false"
+                    link: "https://cra-proto.github.io/cra-portal/index.html?xitpg=false"
                 }], 
                 breadcrumbs: [{
                     title: "Canada.ca", 
@@ -72,10 +72,10 @@
                     href: "https://www.canada.ca/en/services/taxes.html"
                 }, {
                     title: "Savings and pension plans", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/services/taxes/savings-and-pension-plans.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/services/taxes/savings-and-pension-plans.html"
                 }, {
                     title: "The Tax-free Savings Account (TFSA)", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html"
                 }]
             });
         </script>
@@ -272,9 +272,9 @@ div.mg-cell.pr-0 {
 
 <p>For more information:</p>  
 <ul>
-    <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/before-you-contribute.html#toc1">What is contribution room</a></li>
-    <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/what-to-do-if-you-contribute-too-much.html">If you over-contribute to a TFSA</a></li>
-    <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-excess-contributions.html">If you are taxed on excess amounts</a></li>
+    <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/before-you-contribute.html#toc1">What is contribution room</a></li>
+    <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/what-to-do-if-you-contribute-too-much.html">If you over-contribute to a TFSA</a></li>
+    <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-excess-contributions.html">If you are taxed on excess amounts</a></li>
 </ul>
 
 <h2 id="toc3">Transfers due to a divorce or separation </h2>
@@ -297,8 +297,8 @@ div.mg-cell.pr-0 {
  
 <h3>Related information</h3> 
 <ul>
-          <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/before-you-contribute.html#rrsp">RRSP transfers count as income</a></li>
-    <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies.html">If a TFSA holder dies</a></li>  
+          <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/before-you-contribute.html#rrsp">RRSP transfers count as income</a></li>
+    <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies.html">If a TFSA holder dies</a></li>  
     
 </ul>
 
@@ -370,9 +370,9 @@ div.mg-cell.pr-0 {
         <script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
         <script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.js"></script>
         <!-- START of github only scripts -->
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
-        <script src="https://cra-design.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
+        <script src="https://cra-proto.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
         <!-- END of github only scripts -->
     </body>
 </html>
