--- a/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-beneficiary-of-a-tfsa.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-beneficiary-of-a-tfsa.html
@@ -24,11 +24,11 @@
         <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css">
         <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-        <link rel="stylesheet" href="https://cra-design.github.io/gst-hst-business/templates/css/custom.css">
+        <link rel="stylesheet" href="https://cra-proto.github.io/gst-hst-business/templates/css/custom.css">
         <link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_2/wet-boew/assets/favicon.ico" rel="shortcut icon">
 
         <!-- modify mid overlay size -->
-        <link rel="stylesheet" href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tfsa.css">
+        <link rel="stylesheet" href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tfsa.css">
         
     </head>
     <body vocab="https://schema.org/" typeof="WebPage" resource="#wb-webpage">
@@ -41,7 +41,7 @@
         <data id="devoptions" data-loc-storage="gitCRATemplateDevOptions" value="false"></data>
         <data id="exitpage" data-exit-by-url="false" data-mod-link-file="/TFSA-cop/data/exclude-redirect.json" value="/TFSA-cop/exit.html"></data>
         <data id="relextlnk" data-origin="https://www.canada.ca" value="false"></data>
-        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-design.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
+        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-proto.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
         <!-- END of github only template section -->
         <div id="def-top">
             <!-- Write closure fall-back static file -->
@@ -66,7 +66,7 @@
                     type: "contextual", 
                     label: "sign in", 
                     labelExtended: "CRA sign in",
-                    link: "https://cra-design.github.io/cra-portal/index.html?xitpg=false"
+                    link: "https://cra-proto.github.io/cra-portal/index.html?xitpg=false"
                 }], 
                 breadcrumbs: [{
                     title: "Canada.ca", 
@@ -76,13 +76,13 @@
                     href: "https://www.canada.ca/en/services/taxes.html"
                 }, {
                     title: "Savings and pension plans", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/services/taxes/savings-and-pension-plans.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/services/taxes/savings-and-pension-plans.html"
                 }, {
                     title: "The Tax-free Savings Account (TFSA)", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html"
                 }, {
                     title: "When a TFSA holder dies", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies.html"
                 }]
             });
         </script>
@@ -93,7 +93,7 @@
                     <h1 property="name" id="wb-cont" dir="ltr">If you are a designated beneficiary of a TFSA</h1>
 
                   <div id="page-content">
-                      <p class="mrgn-tp-md">Quebec does not recognize the designation of beneficiary for deposit TFSAs or arrangements in trust. For more information, refer to <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/what-happens-when-a-tfsa-holder-dies.html#toc21">Beneficiary designation in Quebec.</a> </p>
+                      <p class="mrgn-tp-md">Quebec does not recognize the designation of beneficiary for deposit TFSAs or arrangements in trust. For more information, refer to <a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/what-happens-when-a-tfsa-holder-dies.html#toc21">Beneficiary designation in Quebec.</a> </p>
 
                             <h2 class="h3">On this page</h2>
                     <ul>
@@ -137,9 +137,9 @@
                               <p>Beneficiaries who over-contribute to their own TFSA  may be taxed <strong>1% per month </strong> for each month the excess amount stays in the account. Always check your available contribution room before making a contribution.</p>
                               <p>For more information: </p>
                             <ul>
-                              <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/calculate-your-tfsa-contribution-room.html">Calculate your TFSA contribution  room</a></li>
-                              <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/how-to-contribute.html">How to contribute to a  TFSA</a></li>
-								<li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-excess-contributions.html#toc1">How excess amounts are taxed</a></li>
+                              <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/calculate-your-tfsa-contribution-room.html">Calculate your TFSA contribution  room</a></li>
+                              <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/contributing-to-a-tfsa/how-to-contribute.html">How to contribute to a  TFSA</a></li>
+								<li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-excess-contributions.html#toc1">How excess amounts are taxed</a></li>
                             </ul>
 
                             <h3>Donations to a qualified donee</h3>
@@ -149,7 +149,7 @@
                             <h2 id="toc2">Tax implications for the deceased holder</h2>
                             <p> If the deceased holder&rsquo;s TFSA contains an excess amount at the time of death, there are tax implications for their estate. An excess amount can occur when a TFSA holder contributes  more than their available contribution room allows. </p>
                               <p>An excess amount is taxable to the deceased holder at a  rate of <strong>1% per month</strong> for each month it stays in  the account, up to and including the month of death.</p>
-					  <p>For more information: <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-excess-contributions.html#toc1">How excess amounts are taxed</a></p>
+					  <p>For more information: <a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/owing-tax-on-a-tfsa/if-you-have-excess-contributions.html#toc1">How excess amounts are taxed</a></p>
                               <p>The deceased holder&rsquo;s legal representative must file the following forms for that period:</p>
                             <ul>
                               <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc243.html">Tax-Free Savings Account Return (Form  RC243)</a></li>
@@ -160,7 +160,7 @@
                             <p>A designated  beneficiary does not have to pay tax on any amount they receive from a TFSA as long as the total amount is not more than the <a class="wb-lbx lbx-modal" href="#fairmarketvalue">fair market value (FMV)<span class="far fa-question-circle mrgn-lft-sm"></span></a> of  the property held in the TFSA on the date of death.</p>
                       <p>However, any TFSA earnings made after the date of death and before the estate is settled are taxable. The tax implications depend on the type of TFSA.</p>
                       <p>Beneficiaries should check with the TFSA issuer or with the deceased holder&rsquo;s legal representative to find  out what type of TFSA it is.</p>
-                            <p>For more information: <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/what-is-a-tfsa.html#toc2">Different types of TFSAs</a></p>
+                            <p>For more information: <a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/what-is-a-tfsa.html#toc2">Different types of TFSAs</a></p>
                       
                             <h3>Taxes on a deposit or annuity contract TFSA </h3>
                             <p>If there is no  successor holder, the deposit or annuity contract stops existing when the  holder of the TFSA dies.</p>
@@ -184,17 +184,17 @@
 
                       <h4 class="h5">Non-resident beneficiary</h4>
                             <p>If you are a non-resident beneficiary, including non-resident  survivor, you must report payment amounts you receive from the trust during the exempt period that are above the fair market value (FMV) of the TFSA. These payments are subject to non-resident withholding tax.</p>
-                            <p>For more information: <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/if-you-become-non-resident.html#toc3">If you are a non-resident beneficiary of a TFSA</a> </p>
+                            <p>For more information: <a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/if-you-become-non-resident.html#toc3">If you are a non-resident beneficiary of a TFSA</a> </p>
 
 <h2>Related information</h2>
 
 <ul>
-    <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/what-happens-when-a-tfsa-holder-dies.html">What happens when a holder dies</a></li>
-    <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-successor-holder-of-a-tfsa.html">If you are a successor holder</a></li>
+    <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/what-happens-when-a-tfsa-holder-dies.html">What happens when a holder dies</a></li>
+    <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-successor-holder-of-a-tfsa.html">If you are a successor holder</a></li>
 </ul>
 
 <!-- Ajax in definitions list for tfsa/ used by overlays -->
-<div data-ajax-replace="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tfsa-defs.html" class="original">
+<div data-ajax-replace="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tfsa-defs.html" class="original">
 
 </div>            
 
@@ -264,9 +264,9 @@
         <script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
         <script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.js"></script>
         <!-- START of github only scripts -->
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
-        <script src="https://cra-design.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
+        <script src="https://cra-proto.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
         <!-- END of github only scripts -->
     </body>
 </html>
