--- a/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/what-happens-when-a-tfsa-holder-dies.html
+++ b/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/what-happens-when-a-tfsa-holder-dies.html
@@ -24,11 +24,11 @@
         <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css">
         <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-        <link rel="stylesheet" href="https://cra-design.github.io/gst-hst-business/templates/css/custom.css">
+        <link rel="stylesheet" href="https://cra-proto.github.io/gst-hst-business/templates/css/custom.css">
         <link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v5_0_2/wet-boew/assets/favicon.ico" rel="shortcut icon">
 
         <!-- modify mid overlay size -->
-        <link rel="stylesheet" href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tfsa.css">
+        <link rel="stylesheet" href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tfsa.css">
 
 
     </head>
@@ -42,7 +42,7 @@
         <data id="devoptions" data-loc-storage="gitCRATemplateDevOptions" value="false"></data>
         <data id="exitpage" data-exit-by-url="false" data-mod-link-file="/TFSA-cop/data/exclude-redirect.json" value="/TFSA-cop/exit.html"></data>
         <data id="relextlnk" data-origin="https://www.canada.ca" value="false"></data>
-        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-design.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
+        <div id="site-banner-inc" class="wb-disable-allow" data-ajax-replace="https://cra-proto.github.io/gst-hst-business/templates/includes/site-banner.htm"></div>
         <!-- END of github only template section -->
         <div id="def-top">
             <!-- Write closure fall-back static file -->
@@ -67,7 +67,7 @@
                     type: "contextual", 
                     label: "sign in", 
                     labelExtended: "CRA sign in",
-                    link: "https://cra-design.github.io/cra-portal/index.html?xitpg=false"
+                    link: "https://cra-proto.github.io/cra-portal/index.html?xitpg=false"
                 }], 
                 breadcrumbs: [{
                     title: "Canada.ca", 
@@ -77,13 +77,13 @@
                     href: "https://www.canada.ca/en/services/taxes.html"
                 }, {
                     title: "Savings and pension plans", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/services/taxes/savings-and-pension-plans.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/services/taxes/savings-and-pension-plans.html"
                 }, {
                     title: "The Tax-free Savings Account (TFSA)", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account.html"
                 }, {
                     title: "When a TFSA holder dies", 
-                    href: "https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies.html"
+                    href: "https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies.html"
                 }]
             });
         </script>
@@ -146,8 +146,8 @@
 
                             <p>For more information:</p>
                             <ul>
-                              <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-successor-holder-of-a-tfsa.html#toc1">What  is a successor holder</a></li>
-                              <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-beneficiary-of-a-tfsa.html#toc1">What  is a designated beneficiary</a></li>
+                              <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-successor-holder-of-a-tfsa.html#toc1">What  is a successor holder</a></li>
+                              <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-beneficiary-of-a-tfsa.html#toc1">What  is a designated beneficiary</a></li>
                             </ul>
 
                             <h3 id="toc21">Beneficiary designation in Quebec </h3>
@@ -171,25 +171,25 @@
       </li>
 </ul>                   
 </details>
-<p>For more information: <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-beneficiary-of-a-tfsa.html#bensurvivor">Survivors may make exempt contributions </a></p> 
+<p>For more information: <a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-beneficiary-of-a-tfsa.html#bensurvivor">Survivors may make exempt contributions </a></p> 
                       
 <h3>Non-resident beneficiary</h3>
                       <p>If you are a non-resident of Canada for income tax purposes and are named as a beneficiary to a TFSA, there may be tax implications.</p> 
 
-<p>For more information: <a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/if-you-become-non-resident.html#toc3">If you are a non-resident beneficiary of a TFSA</a> </p>
+<p>For more information: <a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/if-you-become-non-resident.html#toc3">If you are a non-resident beneficiary of a TFSA</a> </p>
 
 <h2 id="toc3">If there is no  beneficiary</h2>
                               <p>If there is no successor holder or beneficiary designated in  the TFSA contract or will, the property held in the TFSA is directed to the deceased holder&rsquo;s estate and is distributed according  to the terms of the will.</p>
 
                             <h2 class="h3">Related information</h2>
                             <ul>
-                              <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-successor-holder-of-a-tfsa.html">If you are a successor holder</a></li>
-                              <li><a href="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-beneficiary-of-a-tfsa.html">If you are a designated beneficiary</a></li>
+                              <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-successor-holder-of-a-tfsa.html">If you are a successor holder</a></li>
+                              <li><a href="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tax-free-savings-account/when-a-tfsa-holder-dies/if-you-are-a-beneficiary-of-a-tfsa.html">If you are a designated beneficiary</a></li>
                               <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/life-events/doing-taxes-someone-died.html">Doing taxes for  someone who died</a></li>
                             </ul>
                             
 <!-- Ajax in definitions list for tfsa/ used by overlays -->
-<div data-ajax-replace="https://cra-design.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tfsa-defs.html" class="original">
+<div data-ajax-replace="https://cra-proto.github.io/TFSA-cop/en/revenue-agency/services/tax/individuals/topics/tfsa-defs.html" class="original">
 
 </div>
 
@@ -259,9 +259,9 @@
         <script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
         <script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/m%C3%A9li-m%C3%A9lo/2025-12-mille-iles.js"></script>
         <!-- START of github only scripts -->
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
-        <script src="https://cra-design.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
-        <script src="https://cra-design.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/external-link-detour.js"></script>
+        <script src="https://cra-proto.github.io/gst-hst-business/templates/scripts/git-dev-options-e.js"></script>
+        <script src="https://cra-proto.github.io/core-prototype/resources/tools/tinymce/tinymce.min.js"></script>
         <!-- END of github only scripts -->
     </body>
 </html>
